--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,12 +1,15 @@
 name: testing
 on:
   push:
-jobs:
-  build:
-    runs-on: self-hosted
-    steps:
-      - name: get-version
-        id: version
-        run: echo "STEP 1"
-        run: Start-Process "www.outlier.cl"
-      - uses: actions/checkout@v2
+    jobs:
+      build:
+        runs-on: self-hosted
+        steps:
+          - name: get-version
+            id: version
+            run: echo "STEP 1"
+          - uses: actions/checkout@v2
+        steps:
+          - name: get-version
+            id: two
+            run: Start-Process "www.outlier.cl"
