--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,34 +1,36 @@
-name: probandoselfhosted
+# This is a basic workflow to help you get started with Actions
 
+name: CI
+
+# Controls when the workflow will run
 on:
+  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    tags:
-      - "v*"
+    branches: ["main"]
+  pull_request:
+    branches: ["main"]
 
-env:
-  APP: Outlier.Spence.TicketPrint.Web
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  version:
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
     runs-on: self-hosted
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: version
-        id: step-version
-        run: echo "::set-output name=version::$(echo $GITHUB_REF | cut -c12-)"
-    outputs:
-      version: ${{ steps.step-version.outputs.version }}
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v3
 
-  echosomething:
-    runs-on: self-hosted
-    steps:
-      - run: echo "hello"
+      # Runs a single command using the runners shell
+      - name: Run a one-line script
+        run: echo Hello, world!
 
-      - run: echo "one"
-
-      - run: echo "two"
-
-  NavigateSomewhere:
-    runs-on: self-hosted
-    steps:
-      - name: navigate to outlier
-        run: Start-Process www.outlier.cl
+      # Runs a set of commands using the runners shell
+      - name: Run a multi-line script
+        run: |
+          echo Add other actions to build,
+          echo test, and deploy your project.
